--- a/hackerstudent/src/main/res/layout/module_item_layout.xml
+++ b/hackerstudent/src/main/res/layout/module_item_layout.xml
@@ -28,11 +28,10 @@
             <TextView
                 android:id="@+id/module_title"
                 android:layout_width="0dp"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="4dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/montserrat_bold"
                 android:gravity="center|start"
@@ -41,7 +40,6 @@
                 android:textColor="@color/my_color_Accent"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/see_btn"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -53,7 +51,7 @@
                 android:layout_marginEnd="10dp"
                 android:background="@color/trans_parent_btn_color"
                 android:contentDescription="@string/frag_desc"
-                android:src="@drawable/ic_round_add_24"
+                android:src="@drawable/ic_round_remove_24"
                 app:layout_constraintBottom_toBottomOf="@id/module_title"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@id/module_title" />
