--- a/hackerstudent/src/main/res/layout/review_section_layout.xml
+++ b/hackerstudent/src/main/res/layout/review_section_layout.xml
@@ -52,14 +52,14 @@
         android:id="@+id/more_review_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/alert_dialog_box"
+        android:fontFamily="@font/montserrat"
         android:text="@string/course_review_btn"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        android:textStyle="bold"
         android:textAllCaps="false"
-        android:layout_marginEnd="10dp"
-        android:textColor="@color/my_color_dark_Accent"
         app:backgroundTint="@color/trans_parent_btn_color"
+        app:boxStrokeWidthFocused="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/course_review_desc_txt"
         app:layout_constraintRight_toRightOf="@id/course_review_desc_txt"
