--- a/hackerstudent/src/main/res/values/colors.xml
+++ b/hackerstudent/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="light_green">#fb7268</color>
     <color name="my_color">#fb7268</color>
     <color name="my_color_text">#FCE1DD</color>
-    <color name="my_color_Accent">#0B3148</color>
+    <color name="my_color_Accent">#0E2A3B</color>
     <color name="my_color_dark_Accent">#0E2A3B</color>
 
 </resources>
