--- a/hackerstudent/src/main/res/layout/course_purchase_layout.xml
+++ b/hackerstudent/src/main/res/layout/course_purchase_layout.xml
@@ -71,6 +71,7 @@
         android:text="@string/course_add_cart_btn"
         android:textColor="@color/black"
         android:textSize="15sp"
+        android:drawablePadding="10dp"
         android:textStyle="bold"
         app:backgroundTint="@color/trans_parent_btn_color"
         app:boxStrokeWidthFocused="4dp"
