--- a/hackerstudent/src/main/res/layout/course_view_fragment.xml
+++ b/hackerstudent/src/main/res/layout/course_view_fragment.xml
@@ -67,6 +67,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/course_view_recycle"
             android:layout_width="match_parent"
+            android:background="@color/white"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
