--- a/hackerstudent/src/main/res/layout/explore_fragment.xml
+++ b/hackerstudent/src/main/res/layout/explore_fragment.xml
@@ -155,6 +155,7 @@
             android:id="@+id/course_layout_recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
