--- a/hackerstudent/src/main/res/layout/home_screen_framgment.xml
+++ b/hackerstudent/src/main/res/layout/home_screen_framgment.xml
@@ -19,5 +19,6 @@
         android:id="@+id/main_recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical" />
 </androidx.constraintlayout.widget.ConstraintLayout>
