--- a/hackerstudent/src/main/res/layout/module_view_fragment.xml
+++ b/hackerstudent/src/main/res/layout/module_view_fragment.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.hackerstudent.ui.ModuleViewFragment">
 
 
@@ -76,22 +76,23 @@
             android:id="@+id/course_layout_recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layoutAnimation="@anim/recycle_left_to_right"
-            tools:listitem="@layout/module_item_layout"
+            android:orientation="vertical"
+            android:background="@color/white"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@layout/module_item_layout" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/course_Lottie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerInside"
-            android:src="@drawable/hacking_main_icon"
             android:visibility="gone"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:lottie_autoPlay="true"
-            app:lottie_loop="true" />
+            app:lottie_loop="true"
+            tools:src="@drawable/hacking_main_icon" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
