--- a/hackerstudent/src/main/res/layout/profile_framgnet.xml
+++ b/hackerstudent/src/main/res/layout/profile_framgnet.xml
@@ -83,6 +83,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
+            android:background="@color/white"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
