--- a/hackerstudent/src/main/res/layout/viedo_item_layout.xml
+++ b/hackerstudent/src/main/res/layout/viedo_item_layout.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:ellipsize="end"
+            android:textColor="@color/black"
             android:fontFamily="@font/montserrat"
             android:maxLines="2"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -73,17 +74,23 @@
 
         <Button
             android:id="@+id/view_ass_btn"
+
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/alert_dialog_box"
+
             android:text="@string/ass_btn"
             android:textAllCaps="false"
+            android:textSize="13sp"
+            android:fontFamily="@font/montserrat"
             android:textColor="@color/my_color_dark_Accent"
+
             app:backgroundTint="@color/trans_parent_btn_color"
+            app:boxStrokeWidthFocused="4dp"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
