--- a/hackerstudent/src/main/res/navigation/user_nav_graph.xml
+++ b/hackerstudent/src/main/res/navigation/user_nav_graph.xml
@@ -104,6 +104,9 @@
         <argument
             android:name="title"
             app:argType="string" />
+        <argument
+            android:name="id"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/pdfFileViewFragment"
