--- a/hackerstudent/src/main/res/layout/course_view_fragment.xml
+++ b/hackerstudent/src/main/res/layout/course_view_fragment.xml
@@ -17,6 +17,7 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
+            android:id="@+id/app_bar_preview"
             android:layout_height="wrap_content"
             android:background="@color/white">
 
