--- a/hackerstudent/src/main/res/drawable/ic_round_remove_24.xml
+++ b/hackerstudent/src/main/res/drawable/ic_round_remove_24.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="40dp"
     android:height="40dp"
-    android:tint="@color/my_color_dark_Accent"
+    android:tint="@color/black"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
