--- a/hackerstudent/src/main/res/layout/module_view_fragment.xml
+++ b/hackerstudent/src/main/res/layout/module_view_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context="com.example.hackerstudent.ui.ModuleViewFragment">
 
@@ -54,7 +55,6 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="4dp"
                     android:ellipsize="end"
                     android:fontFamily="@font/montserrat_bold"
                     android:gravity="start|center"
@@ -65,8 +65,20 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@id/arrow_img"
+                    app:layout_constraintRight_toLeftOf="@id/review_btn"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/review_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_margin="4dp"
+                    android:contentDescription="@string/review_tab"
+                    android:src="@drawable/ic_review_tab"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -76,9 +88,9 @@
             android:id="@+id/course_layout_recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             android:layoutAnimation="@anim/recycle_left_to_right"
             android:orientation="vertical"
-            android:background="@color/white"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:listitem="@layout/module_item_layout" />
