--- a/app/src/main/res/layout/ticket_message_layout.xml
+++ b/app/src/main/res/layout/ticket_message_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -10,39 +11,107 @@
         android:id="@+id/ticket_message_item_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
+        android:orientation="horizontal"
+        android:gravity="left"
+        android:layout_margin="6dp"
+        layoutGravity="@{ticketMessageLayoutBinding}"
+        android:padding="5dp"
+        >
 
-        <TextView
-            android:id="@+id/ticket_message_item_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            ticketMessage="@{ticketMessageLayoutBinding}"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image_border"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="3dp"
+            android:src="@drawable/samplebaby"
+            app:civ_border_color="@color/white"
+            android:visibility="gone"
+            layoutImageStatus="@{ticketMessageLayoutBinding}"
+            app:civ_border_width="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/babyAgeView" />
 
         <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        ticketSender="@{ticketMessageLayoutBinding}">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
 
             <TextView
-                android:id="@+id/ticket_message_item_date"
+                android:id="@+id/senderName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                ticketDate="@{ticketMessageLayoutBinding}"/>
+                android:text="Support"
+                supportStatus="@{ticketMessageLayoutBinding}"
+                android:textStyle="bold"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="25dp"
+                android:outlineAmbientShadowColor="@color/black"
+                android:padding="6dp"
+                android:orientation="vertical"
+                ticketLayout="@{ticketMessageLayoutBinding}"
+                >
 
-            <ImageView
-                android:id="@+id/ticket_message_item_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                ticketStatus = "@{ticketMessageLayoutBinding}"/>
+
+                <TextView
+                    android:id="@+id/ticket_message_item_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:textSize="16sp"
+                    ticketMessage="@{ticketMessageLayoutBinding}"
+
+                    />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_toRightOf="@id/ticket_message_item_text"
+                    ticketSender="@{ticketMessageLayoutBinding}">
+
+                    <TextView
+                        android:id="@+id/ticket_message_item_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="4dp"
+                        android:textSize="12sp"
+                        android:paddingEnd="4dp"
+                        ticketDate="@{ticketMessageLayoutBinding}"/>
+
+                    <ImageView
+                        android:id="@+id/ticket_message_item_status"
+                        android:layout_width="10dp"
+                        android:layout_height="10dp"
+                        ticketStatus = "@{ticketMessageLayoutBinding}"/>
+
+                </LinearLayout>
+
+
+            </LinearLayout>
 
         </LinearLayout>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image_send"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="3dp"
+            android:src="@drawable/samplebaby"
+            android:visibility="gone"
+            app:civ_border_color="@color/white"
+            sendImageStatus="@{ticketMessageLayoutBinding}"
+            app:civ_border_width="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/babyAgeView" />
+
+
+
+
+
 
     </LinearLayout>
 </layout>
