--- a/app/src/main/res/menu/close_ticket.xml
+++ b/app/src/main/res/menu/close_ticket.xml
@@ -4,5 +4,6 @@
     <item
         android:id="@+id/close_ticket_close"
         android:title="@string/close_ticket"
+        android:icon="@drawable/ic_baseline_exit_to_app_24"
         app:showAsAction="always" />
 </menu>
