--- a/app/src/main/res/layout/cloud_storage_fragment.xml
+++ b/app/src/main/res/layout/cloud_storage_fragment.xml
@@ -153,7 +153,7 @@
                 app:hintTextColor="@color/black"
                 app:layout_constraintLeft_toLeftOf="@id/CourseTargetAudienceLayout"
                 app:layout_constraintTop_toBottomOf="@id/CourseTargetAudienceLayout"
-                app:startIconDrawable="@drawable/ic_user">
+                app:startIconDrawable="@drawable/ic_time">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/CourseTotalHrs"
