--- a/hackerstudent/src/main/res/navigation/user_nav_graph.xml
+++ b/hackerstudent/src/main/res/navigation/user_nav_graph.xml
@@ -56,6 +56,9 @@
         <argument
             android:name="data"
             app:argType="com.example.hackerstudent.utils.SendSelectedCourse" />
+        <argument
+            android:name="id"
+            app:argType="string" />
     </fragment>
     <action
         android:id="@+id/action_global_courseViewFragment"
