--- a/hackerstudent/src/main/res/layout/add_cart_layout.xml
+++ b/hackerstudent/src/main/res/layout/add_cart_layout.xml
@@ -88,7 +88,7 @@
             android:id="@+id/course_Lottie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerInside"
+            android:scaleType="center"
             android:visibility="gone"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:lottie_autoPlay="true"
