Changed App Logo status:Successfully

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -30,7 +30,7 @@
         android:scaleType="centerInside"
         tools:src="@drawable/hacking_main_icon"
         app:lottie_rawRes="@raw/loading"
-        android:visibility="gone"
+        android:visibility="invisible"
         tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
