--- a/app/src/main/res/layout/ticket_list_item.xml
+++ b/app/src/main/res/layout/ticket_list_item.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/ticket_item_title"
-        android:layout_width="220dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
@@ -46,8 +46,7 @@
         android:textColor="#3ea6e4"
         app:layout_constraintBottom_toBottomOf="@+id/ticket_item_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ticket_item_title"
-        app:drawableEndCompat="@drawable/ticket_details_drawable" />
+        app:layout_constraintTop_toTopOf="@+id/ticket_item_title" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ticket_item_details_layout"
